fix trickroom not showing up on battle description and have better handling of conditions not explicitly defined

--- a/src/components/BattleChessGame/PokemonManager/PokemonBattleDisplay/PokemonBattleField/PokemonBattleCondition/PokemonBattleConditions.css
+++ b/src/components/BattleChessGame/PokemonManager/PokemonBattleDisplay/PokemonBattleField/PokemonBattleCondition/PokemonBattleConditions.css
@@ -17,6 +17,8 @@
       -1px 1px 0 black,
       1px 1px 0 black;
 
+    text-transform: capitalize;
+
     @media (min-width: 900px) {
       font-size: 1.2em;
     }
